# sLAM

./: LICENSE  README.md  pyproject.toml  test-ci-locally.sh
.github/workflows/: README.md  test-slam-model.yml
sLAM/: cleanup_checkpoints.py  generate.py  make-slam.py  run-slam.py  slam.py
src/: get_readmes.py
