[tool.poetry]
name = "sLAM"
version = "0.1"
description = "Code to create a GPT-2-style small LAnguage Model"
authors = ["Brian Osborne <bosborne@alum.mit.edu>"]
readme = "README.md"
packages = [{ include = "sLAM" }]
include = [
    "sLAM/make-slam.py",
    "sLAM/get-readmes.py",
    "sLAM/generate.py",
    "sLAM/slam.py",
]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "*"
numpy = "*"
tensorflow = ">=2.8.2"
keras = ">=2.8.0"
datasets = '*'
nltk = '*'
matplotlib = '*'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
