[tool.poetry]
name = "sLAM"
version = "0.1"
description = "Code to create a GPT-2-style small LAnguage Model"
authors = ["Brian Osborne <bosborne@alum.mit.edu>"]
readme = "README.md"
packages = [{ include = "sLAM" }]
include = [
    "sLAM/make-slam.py",
    "sLAM/get-readmes.py",
    "sLAM/generate.py",
    "sLAM/slam.py",
]

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.60"
numpy = "^1.20"
tensorflow = ">=2.8.2,<3.0"
keras = ">=2.8.0,<3.0"
datasets = "^2.0"
nltk = "^3.6"
matplotlib = "^3.5"
scikit-learn = "^1.0"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
