[project]
name = "sLAM"
version = "0.1"
description = "Code to create a GPT-2-style small LAnguage Model"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Brian Osborne", email = "bosborne@alum.mit.edu" }]
keywords = ["generative-modeling", "neural-network"]
dependencies = [
    "tqdm>=4.60",
    "numpy>=1.20",
    "tensorflow>=2.16",
    "keras>=3.0",
    "datasets>=2.0",
    "nltk>=3.6",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
]

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
